syntax = "proto3";

option go_package = "github.com/Ayobami6/common/proto";

package proto;

message User {
    string username = 1;
    string email = 2;
    string phone_number = 3;
    string created_at = 4;
}


message UserRegistrationPayload {
    string username = 1;
    string email = 2;
    string phone_number = 3;
    string password = 4;
}

message UserLoginPayload {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
}

message RegisterMessage {
    string message = 1;
}

message Review {
    int64 user_id = 1;
    int32 rating = 2;
    int64 rider_id = 3;
    string comment = 4;
}

message ReviewMessage {
    string message = 1;
}

service UserServvice {
    rpc RegisterUser (UserRegistrationPayload) returns (RegisterMessage) {};
    rpc LoginUser (UserLoginPayload) returns (LoginResponse) {};
    rpc CreateRating (Review) returns (ReviewMessage){};
}